compiler/tools/fpp-check/test/connection_pattern/telemetry_missing_target_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/telemetry_missing_target_port.fpp: 17.49
    telemetry connections instance $telemetry { c }
                                                ^
error: instance c has no telemetry port
